

# Changelog:

- *added* API.UnlockTitleForPlayer aus QSB2.
- *added* History Edition Editor Sprachenfix.